--- a/Views/Item/Grid.cshtml
+++ b/Views/Item/Grid.cshtml
@@ -1,11 +1,14 @@
 @model IEnumerable<Item>
-    <h1>List of Shop Items {@ViewBag.CurrentViewName View}</h1>
+    <h1>List of Shop Items @ViewBag.CurrentViewName View</h1>
+<!--Provides a link to navigate to the table view of
+the items-->
     <a href="/Item/Table">Table View</a>
 
-    <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="row row-cols-1 row-cols-md-3 g-4"> <!--grid: Sets up a responsive grid with one
+column per row on small screens and three columns per row on medium and larger screens.-->
         @foreach (var item in Model)
         {
-            <div class="col">
+            <div class="col"> <!--col represents a column in the grid for each item-->
                 <div>
                     <img src="@item.ImageUrl" class="card-img-top" alt="@item.Name">
                     <div>
