--- a/Views/Home/index.cshtml
+++ b/Views/Home/index.cshtml
@@ -14,13 +14,13 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="~/Images/pizza.jpg" class="d-block w-100" alt="Pizza">
+            <img src="~/Images/pizza.jpg" class="d-block w-75 mx-auto" alt="Pizza"> <!--endret w-100 til w-75 for å få mindre bilder og mx-auto for å sentrere-->
         </div>
         <div class="carousel-item">
-            <img src="~/Images/fishandchips.jpg" class="d-block w-100" alt="Fried Chicken Leg">
+            <img src="~/Images/fishandchips.jpg" class="d-block w-75 mx-auto" alt="Fried Chicken Leg">
         </div>
         <div class=carousel-item>
-            <img src="~/Images/tacos.jpg" class="d-block w-100" alt="Tacos">
+            <img src="~/Images/tacos.jpg" class="d-block w-75 mx-auto" alt="Tacos">
         </div>
     </div>
 </div>
