--- a/Views/Item/Table.cshtml
+++ b/Views/Item/Table.cshtml
@@ -1,16 +1,16 @@
-@model IEnumerable<MyNewShop.Models.Item>
+@model ItemsViewModel
 
-<h1>List of Shop Items @ViewBag.CurrentViewName</h1>
+<h1>List of Shop Items @Model.CurrentViewName View</h1>
 <a href="/Item/Grid">Grid View</a>
 
     <div class="container">
         <table class='table table-striped'
             <tr><th>Id</th><th>Name</th><th>Price</th><th>Description</th></tr>
-            @foreach (var item in Model)
+            @foreach (var item in Model.Items)    //kodeforklaring finnes i grid.cshtml
             {
                 <tr>
                     <td>@item.ItemId</td>
-                    <td>@item.Name</td>
+                    <td><a asp-controller="Item" asp-action="Details" asp-route-id="@item.ItemId">@item.Name</a></td>
                     <td>@item.Price.ToString("0.00 NOK")</td>
                     <td>@item.Description</td>
                     <td></td>
