--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 @using MyNewShop
 @using MyNewShop.Models
+@using MyNewShop.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!-- this file allows you to define common statements applied to all other views in the application. 
