--- a/Views/Shared/_ItemTable.cshtml
+++ b/Views/Shared/_ItemTable.cshtml
@@ -18,4 +18,10 @@
                 </tr>
             }
         </table>
+        <p>
+         <!--Mekanisme for å lage ny data entry CRUD-->
+            <a class="btn btn-secondary"
+                asp-controller="Item"
+                asp-action="Create"> Create New Item</a>
+        </p>
     </div>
