--- a/Views/Shared/_ItemTable.cshtml
+++ b/Views/Shared/_ItemTable.cshtml
@@ -1,8 +1,15 @@
 @model IEnumerable<Item>
 
 <div class="container">
-        <table class='table table-striped'
-            <tr><th>Id</th><th>Name</th><th>Price</th><th>Description</th></tr>
+        <table class='table table-striped'>
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Price</th>
+                <th>Description</th>
+                <th>Image</th>
+                <th>Actions</th>
+            </tr>
             @foreach (var item in Model)    //kodeforklaring finnes i grid.cshtml
             {
                 <tr>
@@ -14,7 +21,13 @@
                     </td>
                     <td>@item.Price.ToString("0.00 NOK")</td>
                     <td>@item.Description</td>
-                    <td></td>
+                    <td>
+                        <img src="@item.ImageUrl" alt="Item Image" style="max-width: 80px; max-height: 80px;"/>
+                    </td>
+                    <td>
+                        <a asp-action="Update" asp-route-id="@item.ItemId">Update</a>
+                        <a asp-action="Delete" asp-route-id="@item.ItemId">Delete</a>
+                    </td>
                 </tr>
             }
         </table>
