--- a/Views/Item/Delete.cshtml
+++ b/Views/Item/Delete.cshtml
@@ -24,7 +24,7 @@
         <dt class="col-sm-2">Image URL</dt>
         <dd class="col-sm-10">@Model.ImageUrl</dd>
     </dl>
-    <form asp-action="DeleteConfirmed" asp-route-itemid="@Model.ItemId" method="post">
+    <form asp-action="DeleteConfirmed" asp-route-id="@Model.ItemId" method="post">
         <button type="submit" class="btn btn-danger">Delete</button>
         <a asp-action="Table" class="btn btn-secondary">Cancel</a>
     </form>
